fix: hidden legend is in part visible for small screens

--- a/src/components/Legend/Legend.scss
+++ b/src/components/Legend/Legend.scss
@@ -38,12 +38,10 @@
 
 .slide-in {
   transform: translateX(0%);
-  -webkit-transform: translateX(0%);
 }
 
 .slide-out {
-  transform: translateX(93%);
-  -webkit-transform: translateX(93%);
+  transform: translateX(94%);
 }
 
 .slide-in .slide-btn::after {
